--- a/index.html
+++ b/index.html
@@ -2,101 +2,36 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta http-equiv="Content-Security-Policy" content="script-src 'self' https://cdnjs.cloudflare.com">
-  <title>Electron Activity Tracker</title>
+  <title>Activity Tracker Agent</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      padding: 20px;
-    }
-
-    #browserActivityLog, #tasksLog {
-      border: 1px solid #ccc;
-      padding: 10px;
-      height: 150px;
-      overflow-y: auto;
-      white-space: pre-wrap;
-      margin-bottom: 20px;
-    }
-
-    #timelineCanvas {
-      border: 1px solid #444;
-      width: 800px;
-      height: 150px;
-    }
-
-    .task-radio {
-      margin-bottom: 5px;
-    }
+    body { font-family: Arial, sans-serif; padding: 20px; }
+    input, button { margin: 5px; padding: 5px; }
+    #lists > div { margin-top: 15px; }
+    #lists > div > div { margin-bottom: 3px; }
   </style>
 </head>
 <body>
-  <h2>Task Manager</h2>
+  <h1>Activity Tracker Agent</h1>
+  <label>User ID: <input id="userId" value="Ram" /></label><br />
+  <label>Date: <input type="date" id="date" value="2025-05-29" /></label><br />
+  <button id="fetchBtn">Fetch Timeline</button>
+  <button id="saveBtn">Save Timeline</button>
 
-  <!-- Task Selection Area -->
-  <div>
-    <h3>Select Task</h3>
-    <ul id="taskRadioList"></ul>
-    <input type="text" id="selectedTaskName" placeholder="Selected Task" readonly />
-    <br><br>
-    <button id="startBtn">Start</button>
-    <button id="stopBtn" disabled>Stop</button>
-    <div id="currentTaskStatus">No active task</div>
+  <div id="lists">
+    <div>
+      <h3>Tasks</h3>
+      <div id="tasks"></div>
+    </div>
+    <div>
+      <h3>Activity</h3>
+      <div id="activity"></div>
+    </div>
+    <div>
+      <h3>Browser</h3>
+      <div id="browser"></div>
+    </div>
   </div>
 
-  <h2>Laptop Activity Status</h2>
-  <div id="activityState">Status: Unknown</div>
-
-  <h2>Browser Activity (Real-time)</h2>
-  <div id="browserActivityLog">Waiting for activity...</div>
-<h2>Timeline Details Table</h2>
-<!--<canvas id="timelineCanvas" width="800" height="150" style="border:1px solid #ccc;">
-</canvas>-->
-<h2>Laptop Active Periods</h2>
-<table id="activePeriodsTable" border="1" cellpadding="5" cellspacing="0">
-  <thead>
-    <tr>
-      <th>Start Time</th>
-      <th>End Time</th>
-      <th>Duration (seconds)</th>
-    </tr>
-  </thead>
-  <tbody id="activePeriodsTableBody">
-    <!-- Active periods rows here -->
-  </tbody>
-</table>
-
-<h2>Laptop Inactive Periods</h2>
-<table id="inactivePeriodsTable" border="1" cellpadding="5" cellspacing="0">
-  <thead>
-    <tr>
-      <th>Start Time</th>
-      <th>End Time</th>
-      <th>Duration (seconds)</th>
-    </tr>
-  </thead>
-  <tbody id="inactivePeriodsTableBody">
-    <!-- Inactive periods rows here -->
-  </tbody>
-</table>
-
-<table id="timelineTable" border="1" cellpadding="5" cellspacing="0">
-  <thead>
-    <tr>
-      <th>Type</th>
-      <th>Name</th>
-      <th>Start Time</th>
-      <th>End Time</th>
-      <th>Duration (s)</th>
-    </tr>
-  </thead>
-  <tbody></tbody>
-</table>
-  
-<button id="exportFullPageImageBtn">Export as Image</button>
-<button id="exportFullPagePdfBtn">Export as PDF</button>
   <script src="./renderer.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 </body>
 </html>
