--- a/index.html
+++ b/index.html
@@ -105,7 +105,17 @@
   </thead>
   <tbody></tbody>
 </table>
-  
+<h2>Active Applications</h2>
+<table id="activeAppsTable" border="1">
+  <thead>
+    <tr>
+      <th>Application</th>
+      <th>Window Title</th>
+      <th>Timestamp</th>
+    </tr>
+  </thead>
+  <tbody></tbody>
+</table>  
   
 <button id="exportFullPageImageBtn" style="margin-top:2em;" >Export as Image</button>
 <button id="exportFullPagePdfBtn" style="margin-top:2em;">Export as PDF</button>
